# gravity

./: CMakeLists.txt
include/: body.hpp  celestial.hpp  constants.hpp  graphics.hpp  gui.hpp  random.hpp
source/: body.cpp  celestial.cpp  graphics.cpp  gui.cpp  main.cpp  random.cpp
